<resources>search_hint
    <string name="app_name">SunRise</string>
    <string name="search_hint">SunRise Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="inform">Thông tin</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="list_books">Danh sách sách</string>
    <string name="title_activity_detail">Chi tiết sản phẩm</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Điện thoại</string>
    <string name="book">Sách</string>
    <string name="favor">Yêu thích</string>
    <string name="clothes">Quần áo</string>
    <string name="server_error">Có lỗi xảy ra !</string>
    <string name="account_not_verify">Tài khoản chưa được kích hoạt</string>
    <string name="api_not_found">Tài khoản không tồn tại</string>
    <string name="wrong_password_or_email">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="main_function">Chức năng chính</string>
    <string name="other">Khác</string>
    <string name="share">Chia sẻ</string>
    <string name="rate_app">Đánh giá</string>
    <string name="logout">Đăng xuất</string>
    <string name="login">Đăng nhap</string>
    <string name="password_must_be_more_than_six_letter">Mật khẩu phải từ 6 ký tự trở lên</string>
    <string name="account_existed">Tài khoản đã tồn tại</string>
    <string name="register_successfully">Đăng ký thành công</string>
    <string name="email_send">Email xác nhận tài khoản đã được gửi đến hòm thư của bạn</string>
    <string name="completed">Hoàn tất</string>
    <string name="verify_email">Xác nhận email</string>
    <string name="still_not_recived_email">Chưa nhận được email ?</string>
    <string name="resend_email">Gửi lại</string>
    <string name="account">Tài khoản</string>
    <string name="add">Thêm</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="about_store">Thông tin của hàng</string>
    <string name="rate">Đánh giá</string>
    <string name="connect_fb">Kết nối với Facebook</string>
    <string name="feedback">Phản hồi</string>
    <string name="feedback_hint">Nhập lời nhắn</string>
    <string name="send">Gửi</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="id_card">Số CMND</string>
    <string name="title_activity_about">Map</string>
    <string name="description">Mô tả bản thân</string>
    <string name="no_internet_connection">Không có kết nối internet</string>
    <string name="enter_message">Nhập lời nhắn</string>
    <string name="must_not_empty">Rỗng</string>
    <string name="history_bill">Lịch sử mua hàng</string>

    <string name="error_message">Có lỗi xảy ra. Vui lòng thử lại></string>
    <string name="clothes_detail">Chi tiết sản phẩm</string>

    <string name="sale">Ưu đãi</string>
    <string name="service">Dịch vụ</string>
    <string name="enter_option">Góp ý thêm</string>
    <string name="title_activity_maps">Map</string>
    <string name="full_name">Họ tên</string>
    <string name="update_description">Cập nhật mô tả</string>
    <string name="enter_des">Nhập mô tả</string>
    <string name="update">Cập nhật</string>
    <string name="error_happened">Có lỗi xảy ra</string>
    <string name="retry">Thử lại</string>


    <string name="selected">Đã chọn</string>
    <string name="pick_avatar">Chọn ảnh</string>
    <string name="must_pick_one_image">Chỉ được chọn duy nhất 1 ảnh</string>
    <string name="reset_password">Đổi mật khẩu</string>
    <string name="not_match">Không khớp</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="forge_pass">Mật khẩu mới sẽ được gửi tới email. Vui lòng nhập đúng đia chỉ email</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="invalid_email">Email không đúng định dạng</string>
    <string name="no_save">Bạn chưa theo dõi sản phẩm nào</string>
    <string name="function_request_login">Tính năng yêu cầu đăng nhập</string>
    <string name="rate_product">Đánh giá sản phẩm</string>
    <string name="message">Chúng tôi sẽ giao hàng sớm nhất có thể !Xin cảm ơn !</string>
    <string name="no_order">Bạn chưa mua sản phẩm nào</string>
    <string name="cart_clothes">Giỏ hàng sản phẩm</string>
    <string name="submit">Xác nhận</string>
    <string name="update_app">Cập nhât phiên bản</string>
    <string name="exit">Tồn tại</string>
    <string name="update_app_message">Tin nhắn cập nhật phiên bản cho ứng dụng</string>
    <string name="server_maintain">Có lỗi xảy ra</string>
    <string name="server_maintain_message">Có lỗi xảy ra. Vui lòng thử lại</string>
    <string name="please_make_sure_the_intenet_connection_is_enable">Máy chủ đang trong thời gian bảo trì. Vui lòng quay lại sau...</string>
    <string name="list_books_favor">Danh sách yêu thích</string>
    <string name="get_book">Sách</string>
    <string name="title_activity_detail_book">DetailBookActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of famililpar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="storage">Bộ sưu tập</string>
    <string name="photo">Máy ảnh</string>
    <string name="day">Ngày</string>
    <string name="month">Tháng</string>
    <string name="all">Tất cả</string>
    <string name="statistics">Thống kê</string>
    <string name="inventory">Tồn kho</string>
    <string name="bestseller">Bán chạy</string>
</resources>
