<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/main_function">
            <item
                android:id="@+id/nav_order"
                android:icon="@drawable/ic_inform"
                android:title="Thông tin đơn hàng" />
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add"
                android:title="@string/add" />
            <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_edit_white"
                android:title="@string/edit" />
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete" />
        </item>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/statistics" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/connect_fb" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_login_gray"
        android:title="@string/logout" />
</menu>
